# typolima

./: .editorconfig  .gitignore  .goreleaser.yaml  .typolimarc.example  AGENTS.md  AICONTEXT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  main.go  pyproject.toml  typolima.rb
.github/: FUNDING.yml
.github/workflows/: test.yml
docs/: CNAME  index.html
pyinstaller_hooks/: pyi_rth_disable_mp.py
tests/: test_typolima.py  test_url_fix.py
typolima/: __init__.py  __main__.py  core.py
typolima/rules/: bg.yaml  ca.yaml  cs.yaml  da.yaml  de.yaml  el.yaml  en-GB.yaml  en-US.yaml  en.yaml  eo.yaml  es.yaml  et.yaml  fi.yaml  fr.yaml  hr.yaml  hu.yaml  id.yaml  it.yaml  nl.yaml  no.yaml  pl.yaml  pt-BR.yaml  pt-PT.yaml  pt.yaml  ro.yaml  ru.yaml  sk.yaml  sl.yaml  sv.yaml  sw.yaml  tl.yaml  tr.yaml  uk.yaml  vi.yaml
