[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "typolima"
dynamic = ["version"]
authors = [
  { name="tvujnick" },
]
description = "Conservative typographic fixer for HTML, PHP and text"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4",
    "pyyaml",
]

[project.scripts]
typolima = "typolima:main"

[tool.setuptools]
packages = ["typolima", "typolima.rules"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.pytest.ini_options]
testpaths = ["tests"]
