[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "typolima"
dynamic = ["version"]
authors = [
  { name="tvujnick" },
]
description = "Conservative typographic fixer for HTML, PHP and text"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "MIT"}
dependencies = [
    "beautifulsoup4",
    "lxml",
    "pyyaml",
    "tqdm",
]

[project.scripts]
typolima = "typolima.__main__:main"

[tool.setuptools]
packages = ["typolima", "typolima.rules"]
include-package-data = true

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.pytest.ini_options]
testpaths = ["tests"]
